<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16sp"
            android:layout_marginBottom="16sp"
            android:gravity="center_horizontal"
            android:text="1Step Leaderboard"
            android:textSize="40dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="152dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/email"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="152dp"
                android:layout_height="57dp"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/totalSteps"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="194dp"
                android:layout_height="match_parent"
                android:layout_margin="5sp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:text="@string/totalCalories"
                android:textSize="22sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5sp" />

    </LinearLayout>
</ScrollView>